Add resume builder to extract skills from qualifications
- Extract qualifications from job listings organized by date
- Parse and categorize skills into resume-friendly categories
- Support for Programming Languages, ML Frameworks, Databases, Cloud Platforms, etc.
- Display formatted resume skills table
- Export to JSON and CSV formats
- Generate summary of most common skills across all jobs

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,9 @@ yarn-error.log*
 trending_keywords.json
 job_listings.json
 job_listings.csv
+resume_skills.json
+resume_skills.csv
+
+# Excel files (if generated)
+*.xlsx
+*.xls
