Add organized folder structure and date-wise skill count exports
- Create proper folder structure: functions/, utils/, documents/sheets/, outcome/
- Move daily job sheets to documents/sheets/ with standardized naming (YYYY-MM-DD.tsv)
- Add outcome/ folder for generated files
- Add outcome/count/ folder for skill frequency counts
- Update resume_builder.py to export date-wise CSV files to outcome/
- Add export_skill_counts_csv() method to generate skill count CSVs
- Each date gets separate CSV files with skill counts and frequencies
- Update convert_to_table.py to use new folder structure
- Update README.md with new project structure
- Update .gitignore to exclude outcome/ folder

--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,9 @@ job_listings.csv
 resume_skills.json
 resume_skills.csv
 
+# Outcome folder (contains date-wise CSV files)
+outcome/
+
 # Excel files (if generated)
 *.xlsx
 *.xls
